# subtitle-generator

./: .gitignore  README.md  analysis.ipynb  pyproject.toml  tuning_goals.md
.github/workflows/: deploy-infra.yml  deploy.yml
api/: function_app.py  host.json  local.settings.json  requirements.txt
api/data/: config.csv  slot_fillers.csv  sources.csv
infra/: main.bicep
infra/modules/: alerts.bicep  functionapp.bicep  monitoring.bicep  storage.bicep
src/subtitle_generator/: __init__.py  analyze.py  calibrate.py  cli.py  config.py  download.py  eval_harness.py  export_db.py  extract.py  extract_openlibrary.py  feedback.py  generate.py  handlers.py  jacket.py  serve.py  slots.py  tune.py
tests/: test_articles.py  test_e2e.py  test_e2e_spot_check.py  test_feedback.py  test_popularity.py
web/: ai-config.json  index.html  spot-check.html
web/js/: app.js  services.js  spot-check-app.js  subtitle-vm.js
web/tests/: test-services.js  test-subtitle-vm.js
