[project]
name = "subtitle-generator"
version = "0.1.0"
description = "Generate bizarre book subtitles by mixing real parts from Library of Congress MARC records"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.2",
    "en-core-web-md",
    "en-core-web-sm",
    "github-copilot-sdk>=0.2.1",
    "inflect>=7.0",
    "pymarc>=5.3.1",
    "spacy>=3.8.14",
    "titlecase>=2.4",
]

[project.optional-dependencies]
tune = ["litellm>=1.72.0", "pydantic>=2.0", "questionary>=2.0"]
deploy = ["azure-data-tables>=12.5"]

[project.scripts]
subtitle-gen = "subtitle_generator.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/subtitle_generator"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
